# exploring-wxWdigets-project

./: CMakeLists.txt
include/: base.h
src/: base.cpp  main.cpp
